mover tablas existentes a los esquemas

--- a/clase-3/1.md
+++ b/clase-3/1.md
@@ -19,4 +19,21 @@ IF NOT EXISTS (SELECT * FROM sys.schemas WHERE name = N'operaciones')
 GO
 
 /*Mover las tablas existentes a los nuevos esquemas*/
+
+/*Mover las tablas existentes a los nuevos esquemas*/
+
+ALTER SCHEMA personas TRANSFER dbo.Usuarios; -- Mueve Usuarios a personas
+
+ALTER SCHEMA biblioteca TRANSFER dbo.Libros; -- Mueve Libros a biblioteca
+
+ALTER SCHEMA operaciones TRANSFER dbo.Prestamos; -- Mueve Prestamos a operaciones
+
+GO
+
+SELECT * FROM personas.Usuarios;
+SELECT * FROM biblioteca.Libros;
+SELECT * FROM operaciones.Prestamos;
+
+-- Mostrará las ablas que pertenecen al esquema indicado en el "Where"
+SELECT TABLE_SCHEMA, TABLE_NAME FROM INFORMATION_SCHEMA.TABLES WHERE TABLE_SCHEMA = 'personas';
 ```
