Eliminacion y reseteo de indices

--- a/clase-3/1.md
+++ b/clase-3/1.md
@@ -36,4 +36,33 @@ SELECT * FROM operaciones.Prestamos;
 
 -- Mostrará las ablas que pertenecen al esquema indicado en el "Where"
 SELECT TABLE_SCHEMA, TABLE_NAME FROM INFORMATION_SCHEMA.TABLES WHERE TABLE_SCHEMA = 'personas';
+
+-- Eliminar el contenido de la tabla Libros
+
+DELETE FROM operaciones.Prestamos;
+
+-- Reiniciar el contador IDENTITY 
+DBCC CHECKIDENT ('operaciones.Prestamos', RESEED, 0);
+
+DELETE FROM biblioteca.Libros;
+DBCC CHECKIDENT ('biblioteca.Libros', RESEED, 0);
+
+INSERT INTO biblioteca.Libros (Titulo, Autor) 
+VALUES (N'Cien Años de Soledad', N'Gabriel García Márquez'),
+	   (N'El Señor de los Anillos', N'J.R.R Tolkien'),
+	   (N'1984', N'George Orwell'),
+	   (N'El Principito', N'Antoine de Saint-Exupéry');
+GO
+
+INSERT INTO operaciones.Prestamos (IDLibro, IDUsuario, FechaPrestamo)
+VALUES (1,1,'2024-03-01'),
+	   (3,2,'2024-03-05'),
+	   (2,3,'2024-03-10');
+GO
+
+/*
+	Debes referenciar las tablas con sus esquemas:
+	biblioteca.Libros
+	operaciones.Prestamos
+*/
 ```
