--- a/clase-4/1.vistas.md
+++ b/clase-4/1.vistas.md
@@ -10,4 +10,43 @@ GO
 
 -- Consultar la vista
 SELECT * FROM biblioteca.vw_PrestamosDetallados;
+
+-- Vista filtrada de préstamos recientes
+SELECT * FROM operaciones.Prestamos;
+
+CREATE VIEW operaciones.vw_Prestamos
+AS
+SELECT u.Nombre, l.Titulo, p.FechaPrestamo FROM operaciones.Prestamos p
+INNER JOIN personas.Usuarios u ON p.IDUsuario = u.IDUsuario
+INNER JOIN biblioteca.Libros l ON p.IDLibro = l.IDLibro
+WHERE p.FechaPrestamo BETWEEN '2024-04-01' AND '2024-04-30';
+GO
+-- Consultar la vista
+SELECT * FROM operaciones.vw_Prestamos;
+
+-- Si necesitamos elimina la vista y darle otro nombre la vamos a eliminar
+DROP VIEW operaciones.vw_Prestamos;
+GO
+-- Creamos de nuevo la lista con el nombre deseado
+CREATE VIEW operaciones.vw_PrestamosAbril
+AS
+SELECT u.Nombre, l.Titulo, p.FechaPrestamo FROM operaciones.Prestamos p
+INNER JOIN personas.Usuarios u ON p.IDUsuario = u.IDUsuario
+INNER JOIN biblioteca.Libros l ON p.IDLibro = l.IDLibro
+WHERE p.FechaPrestamo BETWEEN '2024-04-01' AND '2024-04-30';
+GO
+
+-- Consultar la vista con el nuevo nombre
+SELECT * FROM operaciones.vw_PrestamosAbril;
+/* AND conoci "y"
+*
+2024-03-29 -> Falso
+2024-04-30 -> Verdadero
+2024-04-15 -> Verdadero
+2024-04-27 -> Verdadero
+*** Tabla de verdad "AND" *** 
+Verdadero And Verdadero = Verdadero
+Verdadero And Falso = Falso
+Falso And Verdadero = Falso
+/
 ```
