--- a/clase-4/1.vistas.md
+++ b/clase-4/1.vistas.md
@@ -49,4 +49,27 @@ Verdadero And Verdadero = Verdadero
 Verdadero And Falso = Falso
 Falso And Verdadero = Falso
 /
+
+
+```
+
+```sql
+
+-- Cuantos préstramos tiene cada libro?
+CREATE VIEW biblioteca_vw_ConteoPrestamosPorLibro
+WITH SCHEMABINDING
+AS
+SELECT 
+	p.IDLibro,
+	COUNT_BIG(*) AS TotalPrestamos
+FROM operaciones.Prestamos AS p
+GROUP BY p.IDLibro
+GO
+-- Creacion de índice único agrupado sobre la vista (la convierte en indexada)
+CREATE UNIQUE CLUSTERED INDEX IX_ConteoPrestamosPorLibro
+ON biblioteca_vw_ConteoPrestamosPorLibro(IDLibro);
+GO
+
+-- Consultar la vista
+SELECT * FROM biblioteca_vw_ConteoPrestamosPorLibro;
 ```
