--- a/clase-4/1.vistas.md
+++ b/clase-4/1.vistas.md
@@ -73,3 +73,37 @@ GO
 -- Consultar la vista
 SELECT * FROM biblioteca_vw_ConteoPrestamosPorLibro;
 ```
+
+```sql
+CREATE PROCEDURE operaciones.sp_PrestamosPorUsuario
+	@NombreUsuario NVARCHAR(100)
+AS
+BEGIN
+	SELECT u.Nombre, l.Titulo, p.FechaPrestamo FROM operaciones.Prestamos p
+	INNER JOIN personas.Usuarios u ON p.IDUsuario = u.IDUsuario
+	INNER JOIN biblioteca.Libros l ON p.IDLibro = l.IDLibro
+	WHERE u.Nombre = @NombreUsuario
+END;
+GO
+
+EXEC operaciones.sp_PrestamosPorUsuario @NombreUsuario = N'Carlos Ruiz';
+-- alt 64
+-- INSERTAR UN PRESTAMO 
+SELECT * FROM operaciones.Prestamos;
+
+CREATE PROCEDURE operaciones.sp_InsertarPrestamo
+	@IDLibro INT,
+	@IDUsuario INT,
+	@Fecha DATE
+AS
+BEGIN
+	INSERT INTO operaciones.Prestamos(IDLibro, IDUsuario, FechaPrestamo) 
+	VALUES(@IDLibro,@IDUsuario,@Fecha);
+END;
+GO
+-- Usar el procedimiento para insertar
+EXEC operaciones.sp_InsertarPrestamo @IDLibro = 3, @IDUsuario = 7, @Fecha = '2024-06-05';
+
+EXEC operaciones.sp_ListarPrestamos;
+
+```
